--- a/README.html
+++ b/README.html
@@ -379,6 +379,11 @@ expantancy,</p>
 <li>Life Expectancy+ Eggs: Pachia Lee</li>
 </ul>
 </div>
+<div id="our-presentation" class="section level2">
+<h2>Our Presentation!</h2>
+<p><a href="https://docs.google.com/presentation/d/1BN9HsVjzjM23w02TPsVLT6UbEeYC65nxbEI6GZpzlvE/edit?usp=sharing">BIS15LW2024:
+Group 6 Ecosphere Presentation</a></p>
+</div>
 </div>
 
 
